Project/phase1/test/test_12012937_1.spl
struct node{
	int zls
	;
	char 
	cyg;
};
struct node FluffyFluffy[998244353
]
;
int main(int _fff
){

	char kkk='0x#&';
	char ccc
	='888'
	int m=0x233;
	int a = 1;
	int int_ = Fluffy(a);
	
	
	printf(strlen(s=1.2.3....4545));
	zlstxdy>(((233<6)==(luss
	!=
	99
	
	
	
	)));
	Fluffy(fluffy233difjdl839483djf);
	(fluffy[100]=1000!=999)=000;
	111!=1!=2!=555;
}
